<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.co.redkiteweb.dccweb</groupId>
    <artifactId>dcc-web</artifactId>
    <version>1.0.0.0-SNAPSHOT</version>
    <name>Digital Command Control Web Application</name>
    <url>http://www.redkiteweb.co.uk/</url>
    <packaging>pom</packaging>
    <description>Digital Command Control Web Application for controlling locos and configuring decoders
        of both locos and accessories.
    </description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.4.RELEASE</version>
    </parent>

    <scm>
        <connection>scm:git:https://github.com/shawnbelton/dccweb.git</connection>
        <developerConnection>scm:git:https://github.com/shawnbelton/dccweb.git</developerConnection>
        <url>https://github.com/shawnbelton/dccweb.git</url>
    </scm>

    <organization>
        <name>DCC Web Application</name>
        <url>http://www.redkiteweb.co.uk</url>
    </organization>

    <developers>
        <developer>
            <id>shawn</id>
            <name>Shawn Belton</name>
            <roles>
                <role>Lead</role>
            </roles>
        </developer>
    </developers>

    <modules>
        <module>decoder-definitions</module>
        <module>dcc-core-interfaces</module>
        <module>dcc-data</module>
        <module>dcc-core</module>
        <module>dcc-interface</module>
        <module>nce-interface</module>
        <module>demo-interface</module>
        <module>dcc-locos</module>
        <module>dcc-accessory</module>
        <module>dcc-blocks</module>
        <module>dcc-macros</module>
        <module>dcc-relays</module>
        <module>dcc-webapp</module>
        <module>dummy-relay</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.language>java</sonar.language>
        <jacoco.skip.instrument>false</jacoco.skip.instrument>
        <jacoco-agent.destFile>${project.build.directory}/jacoco.exec</jacoco-agent.destFile>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.2</version>
                <configuration>
                    <dataFile>${jacoco-agent.destFile}</dataFile>
                    <destFile>${jacoco-agent.destFile}</destFile>
                </configuration>
                <executions>
                    <execution>
                        <id>default-instrument</id>
                        <goals>
                            <goal>instrument</goal>
                        </goals>
                        <configuration>
                            <skip>${jacoco.skip.instrument}</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-restore-instrumented-classes</id>
                        <goals>
                            <goal>restore-instrumented-classes</goal>
                        </goals>
                        <configuration>
                            <skip>${jacoco.skip.instrument}</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <skip>${jacoco.skip.instrument}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>${jacoco-agent.destFile}</jacoco-agent.destfile>
                    </systemPropertyVariables>
                    <excludes>
                        <exclude>**/IT*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.6.0.1398</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.9</version>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>summary</report>
                            <report>project-team</report>
                            <report>scm</report>
                            <report>modules</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <configuration>
                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
                    <docletArtifact>
                        <groupId>org.umlgraph</groupId>
                        <artifactId>umlgraph</artifactId>
                        <version>5.6.6</version>
                    </docletArtifact>
                    <additionalparam>-views -all</additionalparam>
                    <useStandardDocletOptions>true</useStandardDocletOptions>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-interface</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>decoder-definitions</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>nce-interface</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>demo-interface</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-core-interfaces</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-macros</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-relays</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-blocks</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-accessory</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.co.redkiteweb.dccweb</groupId>
                <artifactId>dcc-locos</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.rxtx</groupId>
                <artifactId>rxtx</artifactId>
                <version>2.1.7</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>1.10.19</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>2.0.4.RELEASE</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>1.10.19</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.jacoco</groupId>
                <artifactId>org.jacoco.agent</artifactId>
                <version>0.8.2</version>
                <classifier>runtime</classifier>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <site>
            <id>www.redkiteweb.co.uk</id>
            <url>http://www.redkiteweb.co.uk/</url>
        </site>
    </distributionManagement>

</project>
